

const recipes = [
  {
    "title": "Peanut satay tempeh with chilli & crispy kale rice",
    "thumbnail": require('./images/peanutSatayTempeh.jpg'),
    "ingredients": {
      "kale (g)": 80,
      "carrots (g)": 200,
      "spring onions": 2,
      "coriander, fresh (handful)": 1,
...
      "quinoa (g)": 80,
      "chipotle paste (tsp)": 1,
      "sesame seeds, white (g)": 20
    }
  },
  {
    "title": "Sesame tofu, mango & spicy ginger dressing",
    "thumbnail": require('./images/sesameTofuAndMango.jpg'),
    "ingredients": {
      "sugar snap peas (g)": 80,
      "spring onions": 2,
      "chilli, red": 1,
      "ginger, fresh (cm)": 4,
...
