...

  return (
    <SafeAreaView style={ styles.container }>
      <View style={styles.searchContainer}>
        <Text style={{ fontSize: 20 }}>Search By Ingredient</Text>
        <TextInput
          testID='ingredientSearch'
          onChangeText={ text => filterRecipesByIngredient(text) }
          style={ styles.textInput }
        />
      </View>
      <FlatList
        style={ styles.list }
...
